--- a/style.css
+++ b/style.css
@@ -23,13 +23,19 @@ header {
   justify-content: center;
   align-items: center;
 }
+
+.chart-wrapper{
+    margin-top: 30px;
+    padding: 0px 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .hidden {
   display: none;
 }
 
-.chart-wrapper{
-    margin-top: 30px;
-}
+
 
 #inputTexto{
     padding: 20px;
